--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
 	"$schema": "https://openapi.vercel.sh/vercel.json",
 	"version": 2,
-	"alias": "nassro.is-a.dev",
+	"alias": "nassro199.github.io",
 	"cleanUrls": true,
 	"public": true,
 	"regions": [
