--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"private": true,
-	"name": "nassro.is-a.dev",
+	"name": "nassro199.github.io",
 	"version": "2.1.1",
 	"description": "Personal Website for nassro.is-a.dev",
 	"author": "nassro199",
